examples/gatekeeper/required-tags/samples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: AwsRequiredTags
metadata:
  name: awsrequiredtags
spec:
  match:
    kinds:
      - apiGroups: ["dynamodb.aws.upbound.io"]
        kinds: ["Table"]
  parameters:
    tag: "owner"
