examples/gatekeeper/required-tags/samples/dummy-table-missing-tag-fail.yaml
apiVersion: dynamodb.aws.crossplane.io/v1alpha1
kind: Table
metadata:
  name: dummy-table
spec:
  deletionPolicy: Delete
  forProvider:
    region: eu-west-2
    attributeDefinitions:
      - attributeName: id
        attributeType: S
    keySchema:
      - attributeName: id
        keyType: HASH
    billingMode: PROVISIONED
    provisionedThroughput:
      readCapacityUnits: 1
      writeCapacityUnits: 1
    tags:
      - key: "aaa"
        value: "finance"
  providerConfigRef:
    name: aws-provider-config
