examples/gatekeeper/required-tags/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: awsrequiredtags
spec:
  crd:
    spec:
      names:
        kind: AwsRequiredTags
      validation:
        openAPIV3Schema:
          type: object
          properties:
            tag:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package awsrequiredtags
        
        violation[{"msg": msg}] {
          input.review.kind.group == "dynamodb.aws.upbound.io"
          not input.review.object.spec.forProvider.tags[input.parameters.tag]
          msg := sprintf("Attempting to provision a resource without the required tag '%v'", [input.parameters.tag])
        }
